5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1643_2443.log
== TEST (2019-04-14 22:35:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio=float(input("raio do tanque: "))
coluna=float(input("altura da coluna: "))
numero=int(input())
volumedear=(pi*coluna**2*(3*raio-coluna))/3
-- ERROR:
File "XXXX", line 8
    var=abs (d-r)	  
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:36:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio=float(input("raio do tanque: "))
coluna=float(input("altura da coluna: "))
numero=int(input("numero desejado: "))
volumedear=(pi*coluna**2*(3*raio-coluna))/3
-- ERROR:
File "XXXX", line 8
    var=abs (d-r)	  
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:55:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio=float(input("raio do tanque: "))
coluna=float(input("altura da coluna: "))
numero=int(input("numero desejado: "))
v_ar=(pi*coluna**2*(3*raio-coluna))/3
v_esfera=(4*pi*raio**3)/3
v_combustivel=v_esfera-v_ar
if(numero==1):
	print(roun(v_ar,4))
else:
	print(round(v_combustivel,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(roun(v_ar,4))
NameError: name 'roun' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:55:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio=float(input("raio do tanque: "))
coluna=float(input("altura da coluna: "))
numero=int(input("numero desejado: "))
v_ar=(pi*coluna**2*(3*raio-coluna))/3
v_esfera=(4*pi*raio**3)/3
v_combustivel=v_esfera-v_ar
if(numero==1):
	print(roun(v_ar,4))
else:
	print(round(v_combustivel,4))
-- EXECUTION TIME:
0.189697
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2443/main.py", line 12, in <module>
    print(roun(v_ar,4))
NameError: name 'roun' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:55:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio=float(input("raio do tanque: "))
coluna=float(input("altura da coluna: "))
numero=int(input("numero desejado: "))
v_ar=(pi*coluna**2*(3*raio-coluna))/3
v_esfera=(4*pi*raio**3)/3
v_combustivel=v_esfera-v_ar
if(numero==1):
	print(roun(v_ar,4))
else:
	print(round(v_combustivel,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(roun(v_ar,4))
NameError: name 'roun' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:59:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio=float(input("raio do tanque: "))
coluna=float(input("altura da coluna: "))
numero=int(input("numero desejado: "))
v_esfera=(4*pi*raio**3)/3
v_ar=(pi*coluna**2*(3*raio-coluna))/3
v_combustivel=v_esfera-v_ar
if(numero==1):
	print(roun(v_ar,4))
else:
	print(round(v_combustivel,4))
-- EXECUTION TIME:
0.201871
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2443/main.py", line 12, in <module>
    print(roun(v_ar,4))
NameError: name 'roun' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:59:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio=float(input("raio do tanque: "))
coluna=float(input("altura da coluna: "))
numero=int(input("numero desejado: "))
v_esfera=(4*pi*raio**3)/3
v_ar=(pi*coluna**2*(3*raio-coluna))/3
v_combustivel=v_esfera-v_ar
if(numero==1):
	print(roun(v_ar, 4))
else:
	print(round(v_combustivel, 4))
-- EXECUTION TIME:
0.195167
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2443/main.py", line 12, in <module>
    print(roun(v_ar, 4))
NameError: name 'roun' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:00:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio=float(input("raio do tanque: "))
coluna=float(input("altura da coluna: "))
numero=int(input("numero desejado: "))
v_esfera=(4*pi*raio**3)/3
v_ar=(pi*coluna**2*(3*raio-coluna))/3
v_combustivel=v_esfera-v_ar
if(numero==1):
	print(round(v_ar, 4))
else:
	print(round(v_combustivel, 4))
-- EXECUTION TIME:
0.158569
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
